fix(components): fix displaying for high-contrast

--- a/web-components/src/components/toggle-switch/scss/toggle-switch.scss
+++ b/web-components/src/components/toggle-switch/scss/toggle-switch.scss
@@ -46,7 +46,9 @@
         position: relative;
         transition: background 350ms;
         width: $toggle-switch__width;
-
+        @media (-ms-high-contrast: active) {
+          filter: brightness(1) contrast(1) saturate(1.5);
+        }
         &::after {
           border-radius: 100%;
           bottom: 2px;
@@ -74,7 +76,7 @@
       }
 
     }
-    
+
     &--smaller {
       .md-toggle-switch__label__container {
         height: $toggle-switch__height--smaller;
